dashboard.yml
apiVersion: v1
kind: Namespace
metadata:
    name: kubernetes-dashboard

---
kind: Service
apiVersion: v1
metadata:
    labels:
        k8s-app: kubernetes-dashboard
    name: kubernetes-dashboard
    namespace: kubernetes-dashboard
spec:
    ports:
        - port: 443
          targetPort: 8443
    selector:
        k8s-app: kubernetes-dashboard

---
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        k8s-app: kubernetes-dashboard
    name: kubernetes-dashboard
    namespace: kubernetes-dashboard
spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            k8s-app: kubernetes-dashboard
    template:
        metadata:
            labels:
                k8s-app: kubernetes-dashboard
        spec:
            containers:
                - name: kubernetes-dashboard
                  image: kubernetesui/dashboard:v2.2.0
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8443
                        protocol: TCP
                  args:
                      - --auto-generate-certificates
                      - --namespace=kubernetes-dashboard
                      - --enable-skip-login
                      - --disable-settings-authorizer
                      # Uncomment the following line to manually specify Kubernetes API server Host
                      # If not specified, Dashboard will attempt to auto discover the API server and connect
                      # to it. Uncomment only if the default does not work.
                      # - --apiserver-host=http://my-address:port
                  volumeMounts:
                      - name: kubernetes-dashboard-certs
                        mountPath: /certs
                        # Create on-disk volume to store exec logs
                      - mountPath: /tmp
                        name: tmp-volume
                  livenessProbe:
                      httpGet:
                          scheme: HTTPS
                          path: /
                          port: 8443
                      initialDelaySeconds: 30
                      timeoutSeconds: 30
                  securityContext:
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      runAsUser: 1001
                      runAsGroup: 2001
            volumes:
                - name: kubernetes-dashboard-certs
                  secret:
                      secretName: kubernetes-dashboard-certs
                - name: tmp-volume
                  emptyDir: {}
            serviceAccountName: kubernetes-dashboard
            nodeSelector:
                'kubernetes.io/os': linux
            # Comment the following tolerations if Dashboard must not be deployed on master
            tolerations:
                - key: node-role.kubernetes.io/master
                  effect: NoSchedule

---
kind: Service
apiVersion: v1
metadata:
    labels:
        k8s-app: dashboard-metrics-scraper
    name: dashboard-metrics-scraper
    namespace: kubernetes-dashboard
spec:
    ports:
        - port: 8000
          targetPort: 8000
    selector:
        k8s-app: dashboard-metrics-scraper

---
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        k8s-app: dashboard-metrics-scraper
    name: dashboard-metrics-scraper
    namespace: kubernetes-dashboard
spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            k8s-app: dashboard-metrics-scraper
    template:
        metadata:
            labels:
                k8s-app: dashboard-metrics-scraper
            annotations:
                seccomp.security.alpha.kubernetes.io/pod: 'runtime/default'
        spec:
            containers:
                - name: dashboard-metrics-scraper
                  image: kubernetesui/metrics-scraper:v1.0.6
                  ports:
                      - containerPort: 8000
                        protocol: TCP
                  livenessProbe:
                      httpGet:
                          scheme: HTTP
                          path: /
                          port: 8000
                      initialDelaySeconds: 30
                      timeoutSeconds: 30
                  volumeMounts:
                      - mountPath: /tmp
                        name: tmp-volume
                  securityContext:
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      runAsUser: 1001
                      runAsGroup: 2001
            serviceAccountName: kubernetes-dashboard
            nodeSelector:
                'kubernetes.io/os': linux
            # Comment the following tolerations if Dashboard must not be deployed on master
            tolerations:
                - key: node-role.kubernetes.io/master
                  effect: NoSchedule
            volumes:
                - name: tmp-volume
                  emptyDir: {}
