node-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: node-app
    name: node-app
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: node-app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                io.kompose.network/app-network: 'true'
                io.kompose.service: node-app
        spec:
            containers:
                - env:
                      - name: MONGO_DB
                        value: fakedata
                      - name: MONGO_FAKE_COLLECTION
                        value: fakedatas
                      - name: MONGO_HOSTNAME
                        value: mongo-db-srv
                      - name: MONGO_PASSWORD
                        value: test
                      - name: MONGO_PORT
                        value: '27017'
                      - name: MONGO_USERNAME
                        value: leonardo
                  image: leonardoas10/node-app-rnmn:latest
                  name: node-app
            restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
    name: node-app-srv
spec:
    ports:
        - name: '8080'
          port: 8080
          targetPort: 8080
    selector:
        io.kompose.service: node-app
