node-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: node-app
    name: node-app
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: node-app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                io.kompose.network/app-network: 'true'
                io.kompose.service: node-app
        spec:
            containers:
                - env:
                      - name: MONGO_DB
                        valueFrom:
                            configMapKeyRef:
                                name: env
                                key: MONGO_DB
                      - name: MONGO_FAKE_COLLECTION
                        valueFrom:
                            configMapKeyRef:
                                name: env
                                key: MONGO_FAKE_COLLECTION
                      - name: MONGO_HOSTNAME
                        valueFrom:
                            configMapKeyRef:
                                name: env
                                key: MONGO_HOSTNAME
                      - name: MONGO_PASSWORD
                        valueFrom:
                            configMapKeyRef:
                                name: env
                                key: MONGO_PASSWORD
                      - name: MONGO_PORT
                        valueFrom:
                            configMapKeyRef:
                                name: env
                                key: MONGO_PORT
                      - name: MONGO_USERNAME
                        valueFrom:
                            configMapKeyRef:
                                name: env
                                key: MONGO_USERNAME
                  image: leonardoas10/node-app-rnmn:latest
                  name: node-app
            restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
    name: node-app-srv
spec:
    ports:
        - name: '8080'
          port: 8080
          targetPort: 8080
    selector:
        io.kompose.service: node-app
