react-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: react-app
    name: react-app
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: react-app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                io.kompose.network/app-network: 'true'
                io.kompose.service: react-app
        spec:
            containers:
                - image: leonardoas10/react-app-rnmn:latest
                  name: react-app
            restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: react-app
    name: react-app
spec:
    ports:
        - name: '3000'
          port: 3000
          targetPort: 3000
    selector:
        io.kompose.service: react-app
# status:
#     loadBalancer: {}
