dashboard-ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: dashboard
    namespace: kubernetes-dashboard
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
    rules:
        - host: kd.dev
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: kubernetes-dashboard
                        servicePort: 443
