ingress-dashboard-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-dashboard-service
    namespace: kubernetes-dashboard
    annotations:
        kubernetes.io/ingress.class: nginx
        # nginx.ingress.kubernetes.io/use-regex: 'true'
        # kubernetes.io/ingress.allow-http: 'true'
        nginx.ingress.kubernetes.io/secure-backends: 'true'
        nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
        # nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
        # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
    rules:
        - host: kd.dev
          http:
              paths:
                  - path: /dashboard
                    backend:
                        serviceName: kubernetes-dashboard
                        servicePort: 443
                  - path: /metrics
                    backend:
                        serviceName: dashboard-metrics-scraper
                        servicePort: 8000
