ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: rnmn.dev
          http:
              paths:
                  - pathType: Prefix
                    path: /api
                    backend:
                        serviceName: node-app
                        servicePort: 8080
                  - path: /
                    backend:
                        serviceName: react-app
                        servicePort: 3000
